Future release (not yet released!)
----------------------------------

Bug fixes
'''''''''

    * fix crashs on Gtk.TextView when updating the lyrics of a song
    * Fix streams parsing:
      https://github.com/multani/sonata/issues/41
      https://github.com/multani/sonata/issues/38

Internal changes
''''''''''''''''

    * slightly better performance when updating the library


1.7a2 (2013-11-26)
------------------

New features
''''''''''''

    * Download bigger covers from Last.fm
    * Centering the current song using Ctrl+i now also selects the current song
    * Use Transifex as a translation plateform. See
      https://www.transifex.com/projects/p/sonata/
    * Update translations:

        - Russian (thanks Stas!)
        - Ukrainian (thanks Stas!)
        - French (thanks Jon!)

Bug fixes
'''''''''

    * Fix search in library (using a specific filter or the 'everything' filter)
    * Fix scrobbling to Last.fm
    * Scrolling with the mouse wheel on the tray icon correctly changes the volume
    * Some lyrics from LyricsWiki redirects to another page. The plugin now
      follows those redirect to find the actual lyrics.
    * Fix multiple issues related to drag-and-drop of songs in the current playlist
    * Fix error while using Sonata's command line interface
    * Fix filtering songs in the current playlist
    * Fix DND of custom artwork images in the main window
    * Fix breadcrumb icon in the library while browsing an album while in Artist view
    * Fix saving the visibility flag of tabs: https://github.com/multani/sonata/issues/45
    * Fix hiding/showing the main window even if it's not the active widget:
      https://github.com/multani/sonata/issues/43
    * Deleting a track doesn't toggle the filter bar anymore in the current playlist.
    * Better support for MPD 0.18

Internal changes
''''''''''''''''

    * Simplified the `current` module. It should also now use less memory than before.